--- a/index.html
+++ b/index.html
@@ -1421,6 +1421,10 @@
           <p>Hours: 11 AM - 2 AM</p>
         </div>
       </div>
+      <div class="footer-bottom">
+        <p>© 2026 Chicky Bites Pakistan. All rights reserved.</p>
+        <p>Built by Fatik.</p>
+      </div>
     </footer>
 
     <div class="menu-lightbox" id="menu-lightbox" aria-hidden="true" role="dialog" aria-label="Menu image">
