Add favicon link to index.html
Add favicon link to the HTML head section.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="Chicky Bites Pakistan serves cheesy pizzas, burgers, shawarma, rolls, and family deals in Jalalpur Jattan."
     />
+    <link rel="icon" href="assets/logo.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
