Update contact numbers in index.html
Updated contact information and removed alternate phone numbers.

--- a/index.html
+++ b/index.html
@@ -1270,7 +1270,7 @@
             <div class="contact-info">
               <div>
                 <h4>Order Hotline</h4>
-                <a class="contact-link" href="tel:03338585285">
+                <a class="contact-link" href="tel:+923338686289">
                   <span class="icon-inline" aria-hidden="true">
                     <svg viewBox="0 0 24 24" focusable="false">
                       <path
@@ -1278,20 +1278,7 @@
                       />
                     </svg>
                   </span>
-                  0333-8585285
-                </a>
-              </div>
-              <div>
-                <h4>Alternate</h4>
-                <a class="contact-link" href="tel:03083132319">
-                  <span class="icon-inline" aria-hidden="true">
-                    <svg viewBox="0 0 24 24" focusable="false">
-                      <path
-                        d="M6.6 3.5c.6-.2 1.3 0 1.7.5l2.2 2.7c.4.5.5 1.1.3 1.7l-.8 2.2a1 1 0 0 0 .2 1 12.6 12.6 0 0 0 5 5 1 1 0 0 0 1 .2l2.2-.8c.6-.2 1.2-.1 1.7.3l2.7 2.2c.5.4.7 1.1.5 1.7l-.6 1.9c-.2.6-.7 1-1.3 1.1-2.4.4-8.1-.3-13.4-5.6S3.6 7.7 4 5.3c.1-.6.5-1.1 1.1-1.3l1.5-.5z"
-                      />
-                    </svg>
-                  </span>
-                  0308-3132319
+                  +92-333-8686289
                 </a>
               </div>
               <div>
@@ -1352,9 +1339,8 @@
             </label>
             <div class="form-actions">
               <button class="button" type="button" id="whatsapp-order">Order on WhatsApp</button>
-              <button class="button button--ghost" type="button" id="email-order">Send Email</button>
             </div>
-            <p class="form-hint">WhatsApp opens your message with the details above. Email uses your default mail app.</p>
+            <p class="form-hint">WhatsApp opens your message with the details above.</p>
           </form>
         </div>
       </section>
@@ -1374,7 +1360,7 @@
         </div>
         <div>
           <h4>Connect</h4>
-          <a class="footer-link" href="tel:03338585285">
+          <a class="footer-link" href="tel:+923338686289">
             <span class="icon-inline" aria-hidden="true">
               <svg viewBox="0 0 24 24" focusable="false">
                 <path
@@ -1382,17 +1368,7 @@
                 />
               </svg>
             </span>
-            0333-8585285
-          </a>
-          <a class="footer-link" href="tel:03083132319">
-            <span class="icon-inline" aria-hidden="true">
-              <svg viewBox="0 0 24 24" focusable="false">
-                <path
-                  d="M6.6 3.5c.6-.2 1.3 0 1.7.5l2.2 2.7c.4.5.5 1.1.3 1.7l-.8 2.2a1 1 0 0 0 .2 1 12.6 12.6 0 0 0 5 5 1 1 0 0 0 1 .2l2.2-.8c.6-.2 1.2-.1 1.7.3l2.7 2.2c.5.4.7 1.1.5 1.7l-.6 1.9c-.2.6-.7 1-1.3 1.1-2.4.4-8.1-.3-13.4-5.6S3.6 7.7 4 5.3c.1-.6.5-1.1 1.1-1.3l1.5-.5z"
-                />
-              </svg>
-            </span>
-            0308-3132319
+            +92-333-8686289
           </a>
           <a class="footer-link" href="https://www.instagram.com/chickybites.pk" target="_blank" rel="noopener">
             <span class="icon-inline" aria-hidden="true">
