Add 'Order Now' button to navigation

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         </a>
 
         <nav class="nav" aria-label="Primary">
+          <a class="button button--small order-cta" href="#order-form">Order Now</a>
           <button class="nav-toggle" type="button" aria-expanded="false" aria-controls="nav-links">
             <span></span>
             <span></span>
